debhelper (10.6.3) UNRELEASED; urgency=medium

  * Makefile: Use "dpkg-parsechangelog -S" rather than
    "dpkg-parsechangelog | grep".

 -- Niels Thykier <niels@thykier.net>  Wed, 05 Jul 2017 15:51:48 +0000

debhelper (10.6.2) unstable; urgency=medium

  * Refactor test suite and support running tests in parallel.
  * Add a test case for #866570.
  * dh_compress: Apply patch from Sven Joachim to fix a
    regression in 10.5.1.  (Closes: #866713)
  * dh_installman: Fix regression introduced in 10.5.1 that
    caused a "file not found" error when using -P with an
    absolute argument.  Thanks to Adrian Bunk for reporting
    it over IRC.

 -- Niels Thykier <niels@thykier.net>  Wed, 05 Jul 2017 08:40:00 +0000

debhelper (10.6.1) unstable; urgency=medium

  * Makefile: Enable running some tasks in parallel to better
    utilize multiple cores.
  * Dh_Lib: Revert a change that caused dh_install (and other
    tools) to take filenames as absolute if they started with
    a leading slash.  Thanks to Sven Joachim for the prompt
    discovery and notification.  (Closes: #866570)
  * dh_install: Make optimization conditional on compat 11
    for now.  (Closes: #866405)

 -- Niels Thykier <niels@thykier.net>  Fri, 30 Jun 2017 06:50:10 +0000

debhelper (10.6) unstable; urgency=medium

  * dh_installinfo: Use "xargs" so it works even if there are
    "a lot" of info files.
  * Dh_Lib: Introduce a is_build_profile_active function, which
    can be used to check if a given Build-Profile was specified.
  * dh_installdocs: Ignore given documentation files when the
    "nodoc" build profile is specified in DEB_BUILD_PROFILES.
    Note that dh_installdocs is not a complete noop in this case
    as it still ensures the package has a copyright file (or a
    symlinked doc directory).  (Closes: #865869)
  * dh_installman: Fix regression in compat 5 that could make it
    ignore one manpage per invocation.
  * dh_installdocs: Warn if a pattern in the config file matches