@@ -2,6 +2,8 @@ debhelper (10.6.3) UNRELEASED; urgency=medium
 
   * Makefile: Use "dpkg-parsechangelog -S" rather than
     "dpkg-parsechangelog | grep".
+  * debhelper.pod: Use substitution to ensure examples always use the
+    recommended compatibility level.
 
  -- Niels Thykier <niels@thykier.net>  Wed, 05 Jul 2017 15:51:48 +0000
 
